--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@
             width: 1800px;
             margin: 0 auto;
             background: transparent;
-            overflow: hidden;
+            overflow: visible;
             min-height: 100vh;
         }
 
